# auto-qm-form

./: .gitignore  DEV_NOTES.md  GitHub手動釋出文件20250823.md:Zone.Identifier  MAINTENANCE20250814.md  MAINTENANCE20250814.md:Zone.Identifier  alembic.ini  alembic_sanity.sh  backup_before_reinit_20250820_221122.sql  backup_before_reinit_20250820_225150.sql  db_check.py  docker-compose.yml  git_test_marker.txt  makefile  pyproject.toml  rebuild_initial_docker.sh  requirements.txt  setup_projects.py  temp_script.sh
migrations/: script.py.mako  (+1 more)
projects/auto-qm-form/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GitHub手動釋出文件20250823.md  IGNORED_BY_ENV   # 會在 env.py 覆寫 20250812  README_SIMPLIFIED.md  alembic.ini  docker-compose.db.yml  local.db  makefile  pyproject.toml  requirements.txt  test_db.py
projects/auto-qm-form/.github/workflows/: ci.yml
projects/auto-qm-form/migrations/: break_env.py  env.py  prerevision2_env.py
projects/auto-qm-form/migrations/versions/: 0001_init_init_tables.py  3bc2b7b22be1_author_email_check.py  e48cb4a4d81e_add_something.py
projects/auto-qm-form/scripts/: init_test_db.py  refresh_git_env.sh  seed_quality_standards.py  test_with_migrate.sh
projects/auto-qm-form/src/: config.py  crud.py  db.py  main.py  models.py  prerevision2_db.py  schemas.py
projects/auto-qm-form/src/api/routes/: form.py
projects/auto-qm-form/src/core/: file_storage.py  llm.py
projects/auto-qm-form/src/services/: form_generation.py  reference_data.py
projects/auto-qm-form/tests/: conftest.py  test_api.py  test_with_migrate.sh  unittest.mock
(+22 files in other folders)
