
[project]
name = "auto-qm-form"
version = "0.2.0"
description = "Auto QM Form"
requires-python = ">=3.11"
dependencies = [
  "SQLAlchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "python-dotenv",
  "python-multipart==0.0.9", 
  "pandas==2.2.2",
  "openpyxl==3.1.2",
  "pdfplumber==0.10.3"
]

#  add last 4 items for M1, csv, excel,  and pdf

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["src"]


